# FaceDetectionRPI

./: CMakeLists.txt  README.md  build_project.sh  cameraEdgePi.cpp
